@@ -97,10 +97,13 @@
       routines called from C/C++, and requires adjustment of many such
       calls -- see \sQuote{Writing R Extensions} §6.6.1.
 
+      ## g++ 11 supported c++23.
+      ## 2022-09 Recent LLVM (>= 13?) and Apple (>= 13?) clang support c++2b.
       \item There is initial support for C++23 as several compilers are
       now supporting \code{-std=c++23} or \code{-std=c++2b} or similar.
-      There are as yet no additional \command{configure} checks for
-      C++23 features.
+      As for C++20, there no additional \command{configure} checks for
+      C++23 features beyond a check that the compoiler reports a
+      \code{__cplusplus} value greater than that in the C++20 standard.
     }
   }
 
